--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ver 0.54:
+	Add support for DHCPv6 SLAAC address creation.
+	Add support for control of optimistic DAD feature.
+	Add support for checking validity dates of certificates.
+	Add support for RFC 5746 Secure Renegotiation.
+
 ver 0.53:
 	Add support for EC based certificates.
 
