AUTHORS: Mention Finn's contributions

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ John Keeping <john@metanate.com>
 Michael Johnson <mjohnson459@gmail.com>
 Greg Depoire--Ferrer <greg@gregdf.com>
 Milan P. Stanić <mps@arvanta.net>
+Finn Behrens <me@kloenk.dev>
