--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+ver 0.61:
+	Fix issue with not setting DHCP MAC address on start.
+	Fix issue with missing NLM_F_ACK_TLVS and NLM_F_CAPPED.
+
 ver 0.60:
 	Fix issue with missing NETLINK_EXT_ACK definition.
 	Fix issue with incorrect derivation of ECC compressed points.
