--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+ver 0.67:
+	Add support for handling sysctl char settings.
+
 ver 0.66:
 	Fix issue with handling event callback when stopping ACD.
 	Fix issue with handling ICMPv6 DNS and domain lists.
