--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+ver 0.68:
+	Fix issue with string allocation growth strategy.
+	Add support for netlink helper functions.
+
 ver 0.67:
 	Add support for handling sysctl char settings.
 
